fixed double scroll bar issue

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -147,7 +147,3 @@ body {
   display: inline-block;
   padding: 5px;
 }
-
-.LinksOut {
-  display: block;
-}
